--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="game-container">
         <div class="game-area">
-            <div class="floor" id="floor1"></div>
-            <div class="floor" id="floor2"></div>
+            <div class="floor base-floor" id="base-floor"></div>
+            <div class="floor swinging-floor" id="swinging-floor"></div>
         </div>
         <div class="controls">
             <button id="start-button">Start Game</button>
