--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
     <div class="game-container">
         <div class="game-area">
-            <div class="floor base-floor" id="base-floor"></div>
-            <div class="floor swinging-floor" id="swinging-floor"></div>
+            <div class="crane">
+                <div class="hook">
+                    <div class="swinging-floor" id="swinging-floor"></div>
+                </div>
+            </div>
+            <div class="base-floor" id="base-floor"></div>
         </div>
         <div class="controls">
+            <div class="lives">❤️❤️❤️</div>
+            <div class="level">1 LVL</div>
             <button id="start-button">Start Game</button>
-            <p id="score">Score: 0</p>
-            <p id="high-score">High Score: 0</p>
-            <p id="message"></p>
         </div>
     </div>
     <div class="game-over-screen" id="game-over-screen">
